# cmake-c-template

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure  configure.cmd  main.c  run-build  run-build.cmd
